# sample-amazon-quick-suite-knowledge-hub

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  branch-protection.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  help_needed.md
.github/workflows/: deploy-pages.yml  link-checker.yml  nodejs-quality-check.yml  nodejs-security-scan.yml  quality-check.yml  security-scan.yml  stale.yml
docs/: HOW-TO-CONTRIBUTE.md  index.md
docs/integration/: actions.md  knowledge-base.md
docs/integration/actions/2lo-servicenow-action-setup-guide/: README.md
docs/integration/actions/box-action-setup-guide/: README.md
docs/integration/actions/confluence-cloud-knowledge-action-setup-guide/: README.md
docs/integration/actions/ms-sharepoint-action-setup-guide/: README.md
docs/integration/actions/pagerduty-action-setup-guide/: README.md
docs/integration/actions/salesforce-action-setup-guide/: README.md
docs/use-cases/: index.md  npm-audit-fe.json  npm-audit-infrastructure.json
docs/use-cases/actuarial-analysis-solution/: README.md  app.py  pyproject.toml
docs/use-cases/actuarial-analysis-solution/cdk/: README.md  (+2 more)
docs/use-cases/bedrock-kb-retrieval-mcp/: .gitignore  README.md  app.py  pyproject.toml
docs/use-cases/quick-chat-agent-embedding-demo/: .gitignore  README.md
docs/use-cases/redshift-data-query-mcp/: .gitignore  README.md  app.py  pyproject.toml
static/overrides/: main.html
(+64 files in other folders)
