[project]
name = "amazon-quick-suite-knowledge-hub"
version = "1.0.0"
description = "Integration guides and documentation for Amazon Quick Suite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material>=9.7.0",
    "pymdown-extensions>=10.7.1",
    "mkdocs-macros-plugin>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.8",
    "bandit[toml]>=1.7.5",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", "node_modules"]
skips = ["B101"] # Skip assert_used test
